# conway2

./: README.md  conway2.cabal
app/: Main.hs
src/: Lib.hs
