name:                conway2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dat2/conway2#readme
license:             BSD3
license-file:        LICENSE
author:              Nicholas Dujay
maintainer:          nickdujay@gmail.com
copyright:           2017 Nicholas Dujay
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable conway2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-generic
                     , gloss
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dat2/conway2
